@@ -34,10 +34,10 @@ class hmcResourceDelete extends hmController {
     }
     public function setup() {
         $this->modx->lexicon->load('default','resource');
-        if (empty($_REQUEST['rid'])) {
+        if (empty($this->config['gpc']['rid'])) {
             return 'No valid resource id passed.';
         }
-        $this->resource = $this->modx->getObject('modResource',intval($_REQUEST['rid']));
+        $this->resource = $this->modx->getObject('modResource',intval($this->config['gpc']['rid']));
         if (empty($this->resource)) {
             return 'Resource not found.';
         }
