@@ -21,12 +21,12 @@ class hmcResourceUpdate extends hmController {
     }
     public function setup() {
         $this->modx->lexicon->load('default','resource');
-        if (empty($_REQUEST['rid'])) {
+        if (empty($this->config['gpc']['rid'])) {
             return $this->modx->lexicon('resource_err_nf');
         }
-        $this->resource = $this->modx->getObject('modResource',intval($_REQUEST['rid']));
+        $this->resource = $this->modx->getObject('modResource',intval($this->config['gpc']['rid']));
         if (empty($this->resource)) {
-            return $this->modx->lexicon('resource_err_nfs',array('id' => intval($_REQUEST['rid'])));
+            return $this->modx->lexicon('resource_err_nfs',array('id' => intval($this->config['gpc']['rid'])));
         }
         $this->template = $this->resource->getOne('Template');
         return true;
@@ -40,7 +40,7 @@ class hmcResourceUpdate extends hmController {
         $useRichtext = $this->modx->getOption('handyman.useRichtext',null,true);
         if ($useRichtext && $this->resource->get('richtext')) {
             $this->allowRichtext = true;
-            if (intval($_REQUEST['nort']))
+            if (intval($this->config['gpc']['nort']))
                 $this->setPlaceholder('richtextStatus',2);
             else
                 $this->setPlaceholder('richtextStatus',1);
